Fazendo a parte de saldos

--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -89,7 +89,7 @@
   <div class="container">
     <button id="btn-recebim">Recebimentos</button>
     <a href="saidas.html"><button id="btn-saida">Saídas</button></a>
-    <button id="btn-saldo">Saldo</button>
+    <a href="saldos.html"><button id="btn-saldo">Saldos</button></a>
   </div>
 
 
