cadastro de produto finalizado

--- a/public/telaInicial-Professor.html
+++ b/public/telaInicial-Professor.html
@@ -29,7 +29,7 @@
             <small>Cadastrar Novo Item</small>
         </div>
     </div>
-    <div class="button red">
+    <div class="button red" onclick="redirecionarEdicao()">
         <img src="imagens/Vector.svg" alt="">
         <div class="texto">
             <p>Edição</p>
@@ -121,9 +121,11 @@
         window.location.href = "financeiro.html"; 
     }
     function redirecionarCadastro() {
-        window.location.href = "cadastro1.html";
+        window.location.href = "/cadastro/cadastro1";
     }
-
+    function redirecionarEdicao() {
+        window.location.href = "edicao.html";
+    }
     //>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>
     // Seleciona o botão e o dropdown
     const botaoEstoque = document.getElementById("botaoEstoque");
