dando um geral nas páginas arrumando detalhes

--- a/public/catalogo.html
+++ b/public/catalogo.html
@@ -10,7 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
-    <title>Catálogo</title>
+    <title>SGA - Estoque</title>
     <link rel="stylesheet" href="css/catalogo.css">
     <link rel="stylesheet" href="css/navbar.css">
 </head>
@@ -138,7 +138,7 @@
         <!-- acabou as mudanças -->
         <form id="formPesquisa">
             <div class="div_pesquisa">
-                <input type="text" id="codigo">
+                <input type="text" id="pesquisa">
                 <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
             </div>
         </form>
