--- a/public/estoque_real.html
+++ b/public/estoque_real.html
@@ -150,8 +150,10 @@
         </div>
         <!-- acabou as mudanças -->
         <form id="formPesquisa">
-            <div id="area"><input type="text" id="codigo"></div>
-            <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
+            <div class="div_pesquisa">
+                <input type="text" id="pesquisa">
+                <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
+            </div>
         </form>
     </div>
 
