--- a/public/saldos.html
+++ b/public/saldos.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Saídas</title>
+    <title>SGA - Financeiro</title>
     <link rel="stylesheet" href="css/saldos.css" />
     <link rel="stylesheet" href="css/navbar.css">
      <!-- GOOGLE FONTS -->
