Ajustando algumas partes do saldo.js

--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -99,7 +99,7 @@
 
     <div id="formContainer">
       <h2>Novo Recebimento</h2>
-      <button id="close-btn" class="close-btn">&times;</button>
+      <button id="close-btn" class="close-btn" onclick="toggleForm()">&times;</button>
       <form id="registrationForm">
 
         <div class="input-container">
