--- a/public/estoque_real.html
+++ b/public/estoque_real.html
@@ -88,70 +88,62 @@
     <!-------------------------------------------------------------------------------------------------------------------------------->
 
     <div id="barradebusca">
-        <!-- mudanças filtro -->
         <div id="filtrarcontainer">
             <div class="div_pesquisa">
-                <button id="filtrar"><img src="imagens/filtro.svg" alt="" id="fil">Filtrar</button>
+                <button id="filtrar"><img src="imagens/filtro.svg" alt="Filtro" id="fil">Filtrar</button>
             </div>
             <div id="caixote">
-                <div id="ajeitar">
-                    <div id="subajeitada">
-                        Filtros
-                        <div id="textinho">
-                            Limpar Filtros
+                <form id="formFiltrar">
+                    <div id="ajeitar">
+                        <div id="subajeitada">
+                            <span>Filtros</span>
+                            <div id="textinho" onclick="limparFiltros()">
+                                Limpar Filtros
+                            </div>
+                        </div>
+                        <div id="dropdown" class="dentrodropdown">
+                            <label for="categoria">Categoria:</label>
+                            <select id="categoria" name="categoria">
+                                <option value="">Selecione Categoria</option>
+                                <!-- Adicione as opções dinamicamente via JavaScript -->
+                            </select>
+                            <label for="fabricante">Fabricante:</label>
+                            <select id="fabricante" name="fabricante">
+                                <option value="">Selecione Fabricante</option>
+                                <!-- Adicione os fabricantes dinamicamente via JavaScript -->
+                            </select>
+                        </div>
+                        <!-- <div id="inputdata">
+                            <label>Data:</label>
+                            <div id="ajeitardata">
+                                <input type="date" id="dedata" name="dedata" class="datasize">
+                                à
+                                <input type="date" id="atedata" name="atedata" class="datasize">
+                            </div>
+                        </div> -->
+                        <div id="ordernaritem">
+                            <label>Ordenar Item:</label>
+                            <div id="ordenar">  
+                                <select id="ordenacao">
+                                    <option value="">Order Por:</option>
+                                    <option value="az">A - Z</option>
+                                    <option value="za">Z - A</option>
+                                    <option value="maisRecente">Mais Recente</option>
+                                    <option value="maisAntigo">Mais Antigo</option>
+                                </select>
+                            </div>
                         </div>
                     </div>
-                    <div id="dropdown" class="dentrodropdown">
-                        <select id="categoria">
-                            <option value="Categoria">Categoria</option>
-                            <option value="papelaria">Papelaria</option>
-                            <option value="escritorio">Escritório</option>
-                            <option value="eletronicos">Eletrônicos</option>
-                            <option value="armazenagem">Armazenagem</option>
-                        </select>
-                        <select id="fornecedor">
-                            <option value="">Fornecedor</option>
-                            <option value="papelDistrib">Papel Distrib.</option>
-                            <option value="lapisCo">Lápis&Co</option>
-                            <option value="bicDistrib">Bic Distrib</option>
-                            <option value="escolarLTDA">Escolar LTDA</option>
-                            <option value="kalunga">Kalunga</option>
-                            <option value="embalagensBrasil">Embalagens Brasil</option>
-                        </select>
-                        <select id="fabricante">
-                            <option value="">Fabricante</option>
-                            <option value="tilibra">Tilibra</option>
-                            <option value="faberCastell">Faber-Castell</option>
-                            <option value="leoLeo">Leo&Leo</option>
-                            <option value="bic">Bic</option>
-                            <option value="sony">Sony</option>
-                            <option value="duracell">Duracell</option>
-                            <option value="hp">HP</option>
-                            <option value="vacuPack">VacuPack</option>
-                        </select>
-
-                    </div>
-
-                    <div id="inputdata">Data
-                        <div id="ajeitardata">
-                            <input type="date" id="dedata" class="datasize"></input>
-                            à
-                            <input type="date" id="atedata" class="datasize"></input>
-                        </div>
-                    </div>
-                    <div id="ordernaritem">Ordenar Item
-                        <div id="botoes">
-                            <button>A a Z</button>
-                            <button>Z a A</button>
-                        </div>
-                    </div>
-                </div>
+                    <button type="submit" id="filtrarBtn">Filtrar</button>
+                </form>
             </div>
         </div>
+    
+  
         <!-- acabou as mudanças -->
         <form id="formPesquisa">
             <div class="div_pesquisa">
-                <input type="text" id="pesquisa">
+                <input type="text" id="codigo">
                 <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
             </div>
         </form>
@@ -234,59 +226,108 @@
         });
 
         //SCRIPT QUE LIGA OS INPUT AO BACK-END  
-        document.getElementById('formPesquisa').addEventListener('submit', async function (event) {
-            event.preventDefault(); // Evita o comportamento padrão do formulário
+  //SCRIPT QUE LIGA OS INPUT AO BACK-END   
+  document.getElementById('formPesquisa').addEventListener('submit', async function (event) {
+    event.preventDefault(); // Evita o comportamento padrão do formulário
 
-            const pesquisa = {
-                codigo: document.getElementById('codigo').value,
-            };
+    const pesquisa = {
+        codigo: document.getElementById('codigo').value,  // Obtendo o valor do campo 'codigo'
+    };
 
-            try {
-                const response = await fetch('http://localhost:3000/estoque-real', {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify(pesquisa),
-                });
+    try {
+        const response = await fetch('http://localhost:3000/estoque-real', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(pesquisa), // Envia os dados para o backend
+        });
 
-                if (response.ok) {
-                    const pesquisa = await response.json();
+        if (response.ok) {
+            const produtos = await response.json();  // Resposta em formato JSON
 
-                    if (pesquisa.length === 0) {
-                        alert('Nenhum produto encontrado!');
-                        return;
-                    }
+            if (produtos.length === 0) {
+                alert('Nenhum produto encontrado!');
+                return;
+            }
 
-                    const tbody = document.querySelector('#tabela-estoque tbody');
-                    tbody.innerHTML = '';
+            const tbody = document.querySelector('#tabela-estoque tbody');
+            tbody.innerHTML = '';  // Limpa a tabela antes de adicionar novos dados
 
-                    pesquisa.forEach((pesquisa) => {
-                        const row = `
-                  <tr>
-                    <td>${pesquisa.CODIGO}</td>
-                    <td>${pesquisa.NOME_BASICO}</td>
+            produtos.forEach((filtrado) => {
+                const row = `
+                 <tr>
+                    <td>${filtrado.CODIGO}</td>
+                    <td>${filtrado.NOME_BASICO}</td>
                     <td>50</td>
-                    <td>${pesquisa.QUANT_RECENTE}</td>
-                    <td>${pesquisa.QUANTIDADE}</td>
-                    <td>${pesquisa.QUANTIDADE}</td>
+                    <td>${filtrado.QUANT_RECENTE}</td>
+                    <td>${filtrado.QUANTIDADE}</td>
+                    <td>${filtrado.QUANTIDADE}</td>
                     <td>100%</td>
                     <td>OK</td>
                 </tr>
-                  `;
-                        tbody.innerHTML += row;
-                    });
+                `;
+                tbody.innerHTML += row;  // Adiciona a linha à tabela
+            });
+        } else {
+            const errorMessage = await response.text();
+            alert('Erro: ' + errorMessage);
+        }
+    } catch (error) {
+        alert('Erro ao buscar produtos: ' + error.message);
+    }
+});
 
-
-                } else {
-                    const errorMessage = await response.text();
-                    alert('Erro: ' + errorMessage);
-                }
-            } catch (error) {
-                alert('Erro ao buscar produtos: ' + error.message);
-            }
-        });
 
     </script>
 
+<script>
+
+document.getElementById('formFiltrar').addEventListener('submit', async (event) => {
+    event.preventDefault(); // Impede o recarregamento da página
+
+    const fabricante = document.getElementById('fabricante').value;
+    const codigo = document.getElementById('codigo').value;
+    const ordenacao = document.getElementById('ordenacao').value; // Captura a ordenação
+
+    try {
+        const response = await fetch('/filtro-catalogo', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ fabricante, codigo, ordenacao }) // Envia ordenação
+        });
+
+        if (response.ok) {
+            const produtosFiltrados = await response.json();
+
+            const tbody = document.querySelector('#tabela-estoque tbody');
+            tbody.innerHTML = ''; // Limpa os dados antigos
+
+            produtosFiltrados.forEach(filtrado => {     
+                const row = `
+                <tr>
+                    <td>${filtrado.CODIGO}</td>
+                    <td>${filtrado.NOME_BASICO}</td>
+                    <td>50</td>
+                    <td>${filtrado.QUANT_RECENTE}</td>
+                    <td>${filtrado.QUANTIDADE}</td>
+                    <td>${filtrado.QUANTIDADE}</td>
+                    <td>100%</td>
+                    <td>OK</td>
+                </tr>
+              `
+
+              tbody.innerHTML += row;  
+
+            });
+        } else {
+            console.error('Erro ao obter produtos:', await response.text());
+        }
+    } catch (error) {
+        console.error('Erro na requisição:', error);
+    }
+});
+
+
+</script>
 
 
 
