--- a/public/financeiro.html
+++ b/public/financeiro.html
@@ -249,12 +249,9 @@
 
         <!-- acabou as mudanças -->
         <form id="formPesquisa">
-          <div class="div_pesquisa">
-            <input type="text" id="codigo" placeholder="Digite o código" required>
-            <button type="submit" id="pesquisar">
-              Pesquisar <img src="imagens/lupa.svg" alt="Ícone de pesquisa" id="pes">
+            <input type="text" id="pesquisa" placeholder="Digite o código" required>
+              <button id="pesquisar">Pesquisar <img src="imagens/lupa.svg" alt="" id="pes"></button>
             </button>
-          </div>
         </form>
   </div>
  </div>
