--- a/public/saidas.html
+++ b/public/saidas.html
@@ -110,19 +110,19 @@
 
         <div class="input-container">
           <select id="product_font" required>
-            <option value="" disabled selected>Selecione o fornecedor</option>
+            <option value="" disabled selected>Selecione o fornecedor:</option>
             <!-- Opções dinâmicas adicionadas via JS -->
           </select>
-          <label for="product_font">Fornecedor</label>
+          
         </div>
 
         <div class="input-container">
           <select id="numb_lote" required>
-            <option value="" disabled selected>Selecione o lote</option>
+            <option value="" disabled selected>Selecione o lote:</option>
           </select>
 
 
-          <label for="numb_lote">N° do Lote</label>
+          
           <p id="quantity_hint" class="hint">Estoque disponível: </p>
 
         </div>
